refs/ps/testcases/A3/Testcases/Error/tc6.c
void maib()
{
    int x;
    int y;
    bool z;
    x=10;
    y=5;
    x = x+ -y? -x;
    print z == (x>y? 0:1)? y:x;
}